--- a/Rider/src/index.html
+++ b/Rider/src/index.html
@@ -7,23 +7,25 @@
 
   <base href="/" />
 
-  <meta name="color-scheme" content="light only" />
-  <meta name="supported-color-schemes" content="light" />
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="color-scheme" content="light dark" />
+  <meta name="viewport"
+    content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
   <!-- <meta name="apple-mobile-web-app-status-bar-style" content="light-content" /> -->
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
-  <script src="https://maps.google.com/maps/api/js?key=AIzaSyCTYjoPhLcshZVuEdr-amopUuVMy8lyEmA&libraries=places,geometry"></script>
+  <script
+    src="https://maps.google.com/maps/api/js?key=AIzaSyCTYjoPhLcshZVuEdr-amopUuVMy8lyEmA&libraries=places,geometry"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  
+
   <script src="https://js.stripe.com/v3/"></script>
-  <meta name="google-signin-client_id" content="459110381543-h0avffpdjjh82pmt1l94jc803du0upm2.apps.googleusercontent.com" />
+  <meta name="google-signin-client_id"
+    content="459110381543-h0avffpdjjh82pmt1l94jc803du0upm2.apps.googleusercontent.com" />
 
   <!-- <meta name="google-signin-client_id" content="1033966813085-fu8jpt0la5qcpr7prughnmd2nle48q4d.apps.googleusercontent.com" /> -->
   <meta name="google-signin-scope" content="profile email" />
